--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,6 @@
   padding: 15px;
   border-style: solid;
   border-width: 2px;
-  border-color: #FFFFFF;
+  border-color: rgb(185, 170, 170);
   border-radius: 5px;
 }
