Decoration/dev-blog-blog_crud: new scss

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,9 @@
     <% flash.each do |key, message| %>
       <p class="alert alert-<%= key %>"><%= message %></p>
     <% end %>
-      <%= yield %> 
+      <div class="container main">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
