--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+ *# require_tree .
  *= require_self
+ *= require main
+ *= require posts
  */
 
 @import "bootstrap-sprockets";
@@ -43,7 +45,7 @@ html, body {
 }
 
 .sign_in {
-  background-color: #F2F2F2;
+  background-color: #FBFBEF;
   min-height: 100vh;
 }
 
