--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,1 +1,19 @@
-<h2><%= link_to post.title, post_path(post) %></h2>
+<article class="post">
+  <h2><%= link_to post.title, post_path(post) %></h2>
+  <section class="post-head">
+    <small>
+      <time>
+        <%= post.created_at.to_date.strftime("%d %B, %Y") %>
+      </time>
+        |
+        <%= link_to t('posts.update'), edit_post_path(post) %>
+        |
+        <%= link_to t('posts.delete'), post_path(post),
+                                       method: :delete,
+                                       data: { confirm: t('posts.are_you_sure') } %>
+    </small>
+  </section>
+  <section class="post-summary">
+    <%= post.summary %>
+  </section>
+</article>
