--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,20 @@
 <%= render 'blog_navigation' %>
-<h1><%= @post.title %></h1>
-<%= link_to t('posts.update'), edit_post_path(@post) %>
-|
-<%= link_to t('posts.delete'), post_path(@post), method: :delete, data: { confirm: t('posts.are_you_sure') } %>
-<p><%= @post.body %></p>
+<article class="post">
+  <h1><%= @post.title %></h1>
+  <section class="post-head">
+    <small>
+      <time>
+        <%= @post.created_at.to_date.strftime("%d %B, %Y") %>
+      </time>
+        |
+        <%= link_to t('posts.update'), edit_post_path(@post) %>
+        |
+        <%= link_to t('posts.delete'), post_path(@post),
+                                       method: :delete,
+                                       data: { confirm: t('posts.are_you_sure') } %>
+    </small>
+  </section>
+  <section class="post-body">
+    <%= @post.body %>
+  </section>
+</article>
