--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,12 @@
 .main {
   padding-top: 1em;
 }
+
+.field_with_errors {
+  label {
+    color: #FE2E2E;
+  };
+  input, textarea {
+    border-color: #FE2E2E;
+  };
+}
