--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,7 +8,7 @@
       </ul>
   </div>
 <% end %>
-<%= form_for @post do |f| %>
+<%= form_for @post, html: { multipart: true } do |f| %>
   <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: "form-control" %>
@@ -27,6 +27,10 @@
   <div class="form-group">
     <%= f.label t('activerecord.attributes.post.level') %>
     <%= f.text_field :level, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.file_field :image %>
   </div>
 
   <div class="form-group">
