--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -20,3 +20,11 @@ article.post {
     margin-right: 1em;
   };
 }
+
+.editor-summary {
+  min-height: 100px;
+}
+
+.editor-body {
+  min-height: 300px;
+}
