--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,12 +16,12 @@
 
   <div class="form-group">
     <%= f.label :summary %>
-    <%= f.text_area :summary, class: "form-control" %>
+    <%= f.text_area :summary, class: "editor-summary" %>
   </div>
 
   <div class="form-group">
     <%= f.label :body %>
-    <%= f.text_area :body, class: "form-control" %>
+    <%= f.trix_editor :body,class: "editor-body", required: true, autofocus: true %>
   </div>
 
   <div class="form-group">
