--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,6 +16,6 @@
   </section>
   <section class="post-body">
     <%= image_tag @post.image.url(:size400x300), class: 'img-show' if @post.image? %>
-    <%= @post.body %>
+    <%= @post.body.html_safe %>
   </section>
 </article>
