--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,7 +16,7 @@
 
   <div class="form-group">
     <%= f.label :summary %>
-    <%= f.text_area :summary, class: "editor-summary" %>
+    <%= f.text_area :summary, class: "text_area-summary form-control" %>
   </div>
 
   <div class="form-group">
@@ -25,9 +25,18 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :all_tags %>
+    <%= f.text_field :all_tags, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label t('activerecord.attributes.post.level') %>
     <%= f.text_field :level, class: "form-control" %>
   </div>
+
+    <div class="form-group">
+      <%= image_tag @post.image.url(:size100x80), class: 'img-show' if @post.image? %>
+    </div>
 
   <div class="form-group">
     <%= f.file_field :image %>
