--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,16 @@
 <%= render 'blog_navigation' %>
-<h1><%= t('posts.articles') %></h1>
-<%= render @posts %>
+<div class="row">
+  <h1><%= t('posts.articles') %></h1>
+  <div class="col-md-8">
+    <%= render @posts %>
+    <%== pagy_bootstrap_nav(@pagy).html_safe %>
+  </div>
+  <div class="col-md-4">
+    <div class="tag_cloud">
+      <h2><%= t('tags.tags') %></h2>
+      <% tag_cloud(Tag.counts, %w{tag1 tag2 tag3 tag4 tag5}) do |tag, css_class| %>
+        <%= link_to tag.name, tag_path(tag.name), class: css_class %>
+      <% end %>
+    </div>
+  </div>
+</div>
