--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,11 +6,7 @@
     <%== pagy_bootstrap_nav(@pagy).html_safe %>
   </div>
   <div class="col-md-4">
-    <div class="tag_cloud">
-      <h2><%= t('tags.tags') %></h2>
-      <% tag_cloud(Tag.counts, %w{tag1 tag2 tag3 tag4 tag5}) do |tag, css_class| %>
-        <%= link_to tag.name, tag_path(tag.name), class: css_class %>
-      <% end %>
-    </div>
+    <%= render'shared/submenu' %>
+    <%= render'shared/tags' %>
   </div>
 </div>
