--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -34,9 +34,17 @@
     <%= f.text_field :level, class: "form-control" %>
   </div>
 
-    <div class="form-group">
-      <%= image_tag @post.image.url(:size100x80), class: 'img-show' if @post.image? %>
-    </div>
+  <div class="form-group">
+    <%= f.label t('activerecord.attributes.category.category') %>
+    <%= f.collection_select :category_id, Category.order(:name),
+                            :id,
+                            :name, { include_blank: true },
+                            class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= image_tag @post.image.url(:size100x80), class: 'img-show' if @post.image? %>
+  </div>
 
   <div class="form-group">
     <%= f.file_field :image %>
