--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,24 +1,28 @@
-<article class="post">
-  <h2><%= link_to post.title, post_path(post) %></h2>
-  <section class="post-head">
-    <small>
-      <time>
-        <%= post.created_at.to_date.strftime("%d %B, %Y") %>
-      </time>
-        <% if post.category.present? %>
-          |
-          <%= link_to post.category.name, post.category %>
-        <% end %>
-        |
-        <%= link_to t('posts.update'), edit_post_path(post) %>
-        |
-        <%= link_to t('posts.delete'), post_path(post),
-                                       method: :delete,
-                                       data: { confirm: t('posts.are_you_sure') } %>
-    </small>
-  </section>
-  <section class="post-summary clearfix">
-    <%= image_tag post.image.url(:size100x80), class: 'img-thumbnail thumb' if post.image? %>
-    <%= post.summary %>
-  </section>
-</article>
+<% if post.level <= current_user.level %>
+  <article class="post">
+    <h2><%= link_to post.title, post_path(post) %></h2>
+    <section class="post-head">
+      <small>
+        <time>
+          <%= post.created_at.to_date.strftime("%d %B, %Y") %>
+        </time>
+          <% if post.category.present? %>
+            |
+            <%= link_to post.category.name, post.category %>
+          <% end %>
+          <% if current_user.role == 'admin' %>
+            |
+            <%= link_to t('posts.update'), edit_post_path(post) %>
+            |
+            <%= link_to t('posts.delete'), post_path(post),
+                                          method: :delete,
+                                          data: { confirm: t('posts.are_you_sure') } %>
+          <% end %>
+      </small>
+    </section>
+    <section class="post-summary clearfix">
+      <%= image_tag post.image.url(:size100x80), class: 'img-thumbnail thumb' if post.image? %>
+      <%= post.summary %>
+    </section>
+  </article>
+<% end %>
