--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,3 +56,17 @@ html, body {
   background-color:#D8F6CE;
   min-height: 100vh;
 }
+
+.hello {
+  text-align: center;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:50px;
+  padding: 15px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #848484;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 225, 0.6);
+}
