--- a/app/views/categories/_category_navigation.html.erb
+++ b/app/views/categories/_category_navigation.html.erb
@@ -1,3 +1,7 @@
-<%= link_to t('categories.all_categories'), categories_path %>
-|
-<%= link_to t('categories.new_category'), new_category_path %>
+<% if current_user.role == 'admin' %>
+  <%= link_to t('categories.all_categories'), categories_path %>
+  |
+  <%= link_to t('categories.new_category'), new_category_path %>
+  |
+<% end %>
+<%= link_to t('posts.all_articles'), posts_path %>
