--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
-<h1>Home page</h1>
-<%= current_admin_user.inspect %><br/>
-<%= current_user.inspect %>
+<% unless user_signed_in? %>
+  <div class="hello">
+    <h1><%= t('home.hello') %></h1>
+  </div>
+<% end %>
