--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -34,12 +34,16 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown"><%= t('navigation.help') %><b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Действие</a></li>
+            <li><a href="#"><%= t('navigation.info') %></a></li>
             <li><a href="#"><%= t('navigation.about') %></a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
+          <% if current_user.role == 'admin' %>
+            <a class="dropdown-toggle" data-toggle="dropdown"><font color="red"><%= current_user.email %></font><b class="caret"></b></a>
+          <% else %>
+            <a class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
+          <% end %>
           <ul class="dropdown-menu">
             <li><a><%= t('navigation.role') %><%= current_user.role %></a></li>
             <li><a><%= t('navigation.level') %><%= current_user.level %></a></li>
