--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,4 @@
 <h1><%= t('posts.new_article') %></h1>
-<%= render 'form' %>
+<% if current_user.role == 'admin' %>
+  <%= render 'form' %>
+<% end %>
