RefactoringI18n/dev-chat: and policy

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -33,3 +33,16 @@
   border-radius: 5px;
   background: rgba(135, 225, 240, 0.2);
 }
+
+.room-link-container {
+  border: 1px solid rgba(150, 150, 150, 0.4);
+  border-radius: 5px;
+  margin-top: 10px;
+  padding: 15px;
+}
+
+.room-container {
+  border: 1px solid rgba(150, 150, 150, 0.4);
+  padding: 15px;
+  border-radius: 5px;
+}
