--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @room do |f| %>
   <%= f.text_field :name %>
-  <%= f.submit "Save", class: 'btn btn-success' %>
+  <%= f.submit t('rooms.save'), class: 'btn btn-success' %>
+  <%= link_to t('rooms.back'), :back, class: "btn btn-warning" %>
 <% end %>
