Feature/dev-chat: crypt messages

--- a/app/views/rooms/_rooms.html.erb
+++ b/app/views/rooms/_rooms.html.erb
@@ -13,7 +13,7 @@
     <% end %>
   </nav>
 <% else %>
-  <div class="text-muted">
+  <div class="text-muted room-link-container ">
     <%= t('rooms.no_rooms') %>
   </div>
 <% end %>
